# loro

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  template.env
app/: Dockerfile  LICENSE  entrypoint.sh  pyproject.toml
app/app/: main.py
app/app/api/api_v1/: api.py
app/app/core/: config.py
app/app/lib/chatbot/: __init__.py
app/app/settings/: database_adapters.py  default_answers.py  general.py  url_paths_handler.py  web_templating.py
app/app/web/pages/: answers.py  answers_dynamic_form.py  router.py
app/app/web/templates/: base.html
app/loro/: main.py
app/loro/api/api_v1/: api.py
app/loro/core/: config.py
app/loro/lib/chatbot/: __init__.py
backend/loro/api/api_v1/: api.py
backend/loro/core/: config.py
backend/tests/: test_loro.py
ci/: .gitlab-ci.yml  build_latest.sh  build_release.sh  deploy_chatbot_pinda.sh
frontend/loro/: README.md  pubspec.yaml
frontend/loro/android/app/: build.gradle
frontend/loro/ios/Runner/: Info.plist
frontend/loro/ios/Runner.xcodeproj/: project.pbxproj
frontend/loro/test/: widget_test.dart
loro/: main.py
loro/api/api_v1/: api.py
loro/core/: config.py
loro/lib/chatbot/: __init__.py
loro/lib/utils/: schemas.py
loro/web/pages/: __init__.py  answers.py  answers_dynamic_form.py  dialogs.py  dialogs_dynamic_fields_form.py  dialogs_dynamic_form.py  home.py  items.py  returns.py  router.py  routes.py
loro/web/routes/: __init__.py  returns.py  router.py
loro/web/templates/: base.html  home.html  index.html  interactions.html  item.html  page_template.html
(+39 files in other folders)
