[tool.poetry]
name = "loro"
version = "0.1.0"
description = "A python chatbot"
authors = ["Marcus Mello <marcus@vintem.tech>"]
license = "GPL-3.0-or-later"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pydantic = "^1.8.1"
twilio = "^6.58.0"
pendulum = "^2.1.2"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.0"
aiofiles = "^0.6.0"
environs = "^9.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"
black = "^21.5b0"
rope = "^0.19.0"
pony = "^0.7.14"
ipykernel = "^5.5.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loro = "loro.main:start"


